# SoapyUHD

./: .travis.yml  CMakeLists.txt  Changelog.txt  README.md  SoapyUHDDevice.cpp  TypeHelpers.hpp  UHDSoapyDevice.cpp
.github/workflows/: build.yml  ci.yml
debian/: changelog  control  copyright  rules  uhd-soapysdr.install
